<resources>
    <string name="keyboard_enter_label">ENTER</string>
    <string name="keyboard_go_label">GO</string>
    <string name="keyboard_search_label">SEARCH</string>
    <string name="keyboard_send_label">SEND</string>
    <string name="keyboard_next_label">NEXT</string>
    <string name="keyboard_done_label">DONE</string>
    <string name="keyboard_space_label">space</string>
    <string name="permission_allow">Allow</string>
    <string name="permission_reject">Don’t Allow</string>
    <string name="permission_enable">Enable</string>
    <string name="permission_enabled">Enabled</string>
    <string name="permission_camera">Will you allow %1$s to use your camera?</string>
    <string name="permission_microphone">Will you allow %1$s to use your microphone?</string>
    <string name="permission_camera_and_microphone">Will you allow %1$s to use your camera and microphone?</string>
    <string name="permission_location">Will you allow %1$s to access your location?</string>
    <string name="permission_notification">Will you allow %1$s to send notifications?</string>
    <string name="permission_read_external_storage">Will you allow %1$s to read your external storage?</string>
    <string name="permission_persistent_storage">Will you allow %1$s to store data in persistent storage?</string>
    <string name="permission_rationale_title">Additional permissions</string>
    <string name="permission_camera_rationale">Taking images of the world around you requires permission to use your camera.</string>
    <string name="permission_microphone_rationale">Conducting voice searches and text input requires permission to use your microphone.</string>
    <string name="permission_camera_and_microphone_rationale">Providing services like videoconferencing requires permission to use your camera and microphone.</string>
    <string name="permission_location_rationale">Offering nearby news and content requires permission to access your location.</string>
    <string name="permission_notification_rationale">Notifying you of news and updates requires permission to send notifications.</string>
    <string name="settings_privacy_logins">Logins And Passwords</string>
    <string name="settings_fxa_account_manage">Manage Account</string>
    <string name="settings_fxa_account_sign_out">Sign Out</string>
    <string name="developer_options_remote_debugging">Enable Remote Debugging</string>
    <string name="developer_options_env_override">Enable Environment Override</string>
    <string name="developer_options_servo">Enable Servo</string>
    <string name="developer_options_reset">Reset Developer Settings</string>
    <string name="developer_options_reset_button">Reset</string>
    <string name="developer_options_environments">Environment</string>
    <string name="developer_options_pointer_color">Pointer Color</string>
    <string name="fxa_account_options_account">Account</string>
    <string name="fxa_account_options_device_name">Device Name</string>
    <string name="fxa_account_options_sync_title">Sync Settings</string>
    <string name="fxa_account_options_sync_description">Choose what to synchronize on your devices using Firefox</string>
    <string name="fxa_account_options_bookmarks_sync">Bookmarks</string>
    <string name="fxa_account_options_history_sync">History</string>
    <string name="fxa_account_options_logins_sync">Logins</string>
    <string name="fxa_account_options_reset">Reset</string>
    <string name="fxa_account_last_no_synced">Not synced yet</string>
    <string name="security_options_login_save">Save logins and passwords</string>
    <string name="security_options_login_autofill">Autofill</string>
    <string name="security_options_login_sync">Sync logins with Mozilla Accounts</string>
    <string name="security_options_login_fxa">Account…</string>
    <string name="security_options_login_saved">Saved Logins…</string>
    <string name="security_options_login_exceptions">Exceptions…</string>
    <string name="sync">Sync</string>
    <string name="do_not_sync">Don’t Sync</string>
    <string name="brightness_mode_tooltip">Brightness</string>
    <string name="video_mode_tooltip">Video Projection</string>
    <string name="privacy_options_saved_logins_reset">Reset Saved Logins Settings</string>
    <string name="back_tooltip">Back</string>
    <string name="forward_tooltip">Forward</string>
    <string name="refresh_tooltip">Refresh</string>
    <string name="home_tooltip">Home</string>
    <string name="servo_tooltip">Use Servo</string>
    <string name="resize_tooltip">Resize</string>
    <string name="hamburger_menu_tooltip">Menu</string>
    <string name="privacy_policy_title">General privacy policy</string>
    <string name="privacy_policy_subtitle_1">General information</string>
    <string name="privacy_policy_section_1">
        This application has been developed by Igalia, SL (hereinafter IGALIA), with registered office at Bugallal Marchesi, 22 – 1º, 15008, A Coruña, Galicia (Spain), whose contact details are:
        \n\n\t\u2022 Phone number +34 981 913991;
        \n\t\u2022 Email: info@igalia.com
        \n\nThe content and elements that make up the application have been implemented and/or developed by IGALIA under open source licenses, being protected, without limitations, by the intellectual and industrial property laws of the Kingdom of Spain and by the international Treaties and Agreements that may result of application.</string>
    <string name="privacy_policy_subtitle_2">Data protection</string>
    <string name="privacy_policy_section_2">
        IGALIA is committed to complying with the legal provisions regarding the protection of personal data: Regulation (EU) 2016/679 of the European Parliament and of the Council of 27th April 2016 on the protection of natural persons with regard to the processing of personal data and on the free movement of such data and repealing Directive 95/46/EC (General Data Protection Regulation) and in the Organic Law 3/2018, of December 5, on Data Protection and Guarantee of Digital Rights (LOPDGDD).
        \nIGALIA does not collect personal data in such a way that the user can be identified. Therefore, you can use the application, consult and browse the virtual reality environment without revealing your identity or providing personal data to IGALIA, either directly or indirectly; therefore, IGALIA will not be liable for any the data that is entered in WOLVIC.
        \nThe only data and information that IGALIA will obtain for the use of this application, which at no time will be individually linked to the user, are the following:
        \n\n\t\u2022 Analytical, purely statistical, and non-identifying data.
        \n\t\u2022 In order to capture and translate the voice into text, the user’s sound data is sent to the servers owned by the third party company responsible for each platform, through an API for this purpose: for example, in Oculus, from Facebook, a service that sends it to Oculus Voice SDK. At no time is the aforementioned data processed, accessed, or incorporated into the servers owned by IGALIA. The data transmitted will be the exclusive responsibility of the third party companies that own each platform (hereinafter, the Third Parties), which may be located outside the European Union and subject to a legal regime that is less protective of user privacy. We recommend that you carefully read the privacy policy and terms of use of each of these external platforms before accepting and using their services. IGALIA will not be directly or indirectly responsible for the processing of personal data by said Third Parties.
        \n\t\u2022 Geographic location information maybe be obtained from the browser, instead of the one used by the system. However, in order to do so, you must set the location permissions of your device through a specific notice in this regard and IGALIA will in no way link the aforementioned information to you as an identified or identifiable person, although the Third Parties mentioned in the previous point could do so, if applicable. We recommend you to pay attention to their legal terms.
        \n\t\u2022 IGALIA will not access or store, in any way, the addresses or URLs visited by you.
        \n\t\u2022 Integration with Cloud services (such as Mozilla Accounts or Google Accounts) to synchronize data such as your browsing history or your user bookmarks may be possible. In this case, IGALIA will not access or process any information in any way, nor will it pass through IGALIA’s servers.
        \n\nWe remind you again that the Third Party platforms that you access or use with this application could collect this or other identifying data about you, either filling them in voluntarily or involuntarily and/or consciously or unconsciously, possibly outside the scope of European data protection legislation. Therefore, we recommend that you inform yourself and pay special attention to the legal terms of said Third Parties, such as, for example, the following:
        \n\n\t\u2022 Google: https://policies.google.com/privacy
        \n\t\u2022 Facebook: https://www.facebook.com/about/privacy/update
        \n\t\u2022 Vosk: https://alphacephei.com/vosk
        \n\nLikewise, IGALIA informs you that while using the voice recognition option of the browser, Vosk processes your voice data completely offline on your device. No voice data or transcriptions are transmitted to external servers. All processing happens locally, ensuring your privacy is fully protected.
        \nIn any case, IGALIA guarantees to the interested parties the exercise of the rights of access, rectification, deletion, opposition, limitation of treatment, and portability, regarding their personal data.
        \nFor such purposes, IGALIA has established an internal protocol/procedure to carry them out.
        \nInterested parties can exercise their rights are as follows: by sending a request to IGALIA’s physical address: Calle Bugallal Marchesi, 22, 1o, 15008, A Coruña, Reference: “Data Protection”; or, to the following email address: info@igalia.com.
        \nIn both cases, the interested party must attach a copy of their national ID, passport, or identification document to prove their identity.
        \nThe Data Protection Officer or the department entrusted with the management of the rights will record the exercises of rights in the form, available for this purpose, in which the following data will be recorded:
        \n\n\t\u2022 Application number: a number will be assigned to each of the received applications.
        \n\t\u2022 Headquarters: if the person in charge has several headquarters, the headquarters where the request was received will be stated.
        \n\t\u2022 Channel to file claims: the channel through which the request was received will be indicated: physical mail address, mail, etc.
        \n\t\u2022 Filing date: the date when the request has been filed will be indicated.
        \n\t\u2022 Exercised rights: the type of right the person exercised.
        \n\t\u2022 Response day: the day on which the response was sent to the interested party.
        \n\nThe supporting documentation (receipt of request/response, communications, etc.) will be archived for the purpose of proving its correct management.
        \nLikewise, you are reminded that you have the right to file a claim with the Spanish Data Protection Agency.
    </string>
    <string name="privacy_policy_subtitle_3">Applicable law and original language</string>
    <string name="privacy_policy_section_3">
        This Privacy Policy is subject to Spanish law. The Privacy Policy language of this application is Spanish. For this reason, any possible divergence between the original version in Spanish and its translation into another language will be considered as predominant in the Spanish version that can be found here: https://wolvic.com/es/legal/privacy/ .
    </string>
</resources>