<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/imageContainer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ff_logo" />
        </FrameLayout>

        <TextView
            android:id="@+id/privacyPolicyTitle"
            style="@style/policyTitle"
            android:text="@string/privacy_policy_title" />

        <TextView
            android:id="@+id/privacyPolicySubtitle1"
            style="@style/policySubtitle"
            android:text="@string/privacy_policy_subtitle_1" />

        <TextView
            android:id="@+id/privacyPolicySection1"
            style="@style/policyBody"
            android:text="@string/privacy_policy_section_1" />

        <TextView
            android:id="@+id/privacyPolicySubtitle2"
            style="@style/policySubtitle"
            android:text="@string/privacy_policy_subtitle_2" />

        <TextView
            android:id="@+id/privacyPolicySection2"
            style="@style/policyBody"
            android:text="@string/privacy_policy_section_2" />

        <TextView
            android:id="@+id/privacyPolicySubtitle3"
            style="@style/policySubtitle"
            android:text="@string/privacy_policy_subtitle_3" />

        <TextView
            android:id="@+id/privacyPolicySection3"
            style="@style/policyBody"
            android:text="@string/privacy_policy_section_3" />
    </LinearLayout>

</layout>
