<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:id="@+id/fullScreenModeContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="5dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/fullscreen_button" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <org.mozilla.vrbrowser.ui.views.UIButton
                android:id="@+id/fullScreenExitButton"
                style="?attr/fullScreenButtonStyle"
                android:background="@drawable/fullscreen_button_first"
                android:src="@drawable/ic_icon_back"
                android:tooltipText="@string/back_tooltip" />

            <org.mozilla.vrbrowser.ui.views.UIButton
                android:id="@+id/fullScreenResizeEnterButton"
                style="?attr/fullScreenButtonStyle"
                android:src="@drawable/ic_icon_resize"
                android:tooltipText="@string/resize_tooltip" />

            <org.mozilla.vrbrowser.ui.views.UIButton
                android:id="@+id/projectionButton"
                style="?attr/fullScreenButtonStyle"
                android:src="@drawable/ic_icon_vr_projection"
                android:tooltipText="@string/video_mode_tooltip" />

            <org.mozilla.vrbrowser.ui.views.UIButton
                android:id="@+id/brightnessButton"
                style="?attr/fullScreenButtonStyle"
                android:background="@drawable/fullscreen_button_last"
                android:src="@drawable/ic_icon_brightness"
                android:tooltipText="@string/brightness_mode_tooltip" />
        </LinearLayout>
    </FrameLayout>
</merge>